# Library-managment-system

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/v1/: api.py
src/core/: config.py
src/db/: __init__.py  base.py  base_class.py  database.py
src/endpoint/: endpoint.py
src/jwt/: README.md  utils.py
src/models/: model_book.py
src/schemas/: book_schemas.py
src/service/: crud.py
